Continuacion Menu inicio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,11 @@
     <string name="texto_aceptar">Aceptar</string>
 
 
+    <!-- Texto Generico-->
+    <string name="texto_catalogo">Catalogo</string>
+    <string name="texto_clirntes">Clientes</string>
+    <string name="texto_pedidos">Pedidos</string>
+    <string name="texto_reportes">Reportes</string>
+
+
 </resources>
